integrador-hpe-suzano-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: integrador-hpe-suzano
  namespace: integrador-hpe-suzano

spec:
  type: ClusterIP

  selector:
    app: integrador-hpe-suzano

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8114
