integrador-hpe-suzano-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: integrador-hpe-suzano
  namespace: integrador-hpe-suzano
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.proativetec.com.br
      secretName: api-proativetec-tls

  rules:
    - host: api.proativetec.com.br
      http:
        paths:
          - path: /hpe-suzano(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: integrador-hpe-suzano
                port:
                  number: 80
